:white_check_mark: Change main plugin class to allow better testing

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: "fr.pegasus.papermc.PegasusPlugin"
+main: "fr.pegasus.papermc.samples.game.GameSamplePlugin"
 
 name: "PegasusFramework"
 version: "0.1"
