:test_tube: Add tests for GameManager methods

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>7.2.14</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
